--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ header{
 
     background-image:linear-gradient(var(--gradient-color), var(--gradient-color)), url(' http://placebeard.it/640/480');
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: var(--hero-text-color);
@@ -59,4 +59,8 @@ header h1{
     border-radius: 20px;
 
     background-color: var(--button-color);
+}
+
+footer{
+    text-align: right;
 }
