added sectons and smooth scrolling

--- a/main.css
+++ b/main.css
@@ -7,13 +7,16 @@
     --text-color: #131112;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0;
     font-family: sans-serif;
     background-color: var(--background-color);
     max-width: 100%;
     overflow-x: hidden;
-
 }
 
 header{
@@ -32,12 +35,16 @@ header{
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: var(--hero-text-color);
+    
+}
 
+footer{
+    text-align: right;
 }
 
 header h1{
     font-size: 5em;
-
+    
     margin-top: 0;
     margin-bottom: 0.5em;
 
@@ -65,6 +72,10 @@ header h1{
     background-color: var(--button-color);
 }
 
-footer{
-    text-align: right;
+.section{
+    height: 100vh;
+}
+
+.btn:hover{
+    background-color: var(--highlight-color);
 }
