--- a/main.css
+++ b/main.css
@@ -34,8 +34,7 @@ header{
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: var(--hero-text-color);
-    
+    color: var(--hero-text-color);  
 }
 
 footer{
@@ -78,4 +77,9 @@ header h1{
 
 .btn:hover{
     background-color: var(--highlight-color);
+}
+
+.logo{
+    max-width: 10vw;
+    height: auto;
 }
