--- a/main.css
+++ b/main.css
@@ -119,4 +119,9 @@ header h1{
         width: 100%;
         height: 50%;
     }
+
+    .logo{
+        max-width: 20vw;
+        margin: 1vw;
+    }
 }
