--- a/main.css
+++ b/main.css
@@ -81,6 +81,14 @@ header h1{
     height: 100vh;
 }
 
+.blue-section{
+    background-color: var(--highlight-color);
+}
+
+.pink-section{
+    background-color: var(--button-color);
+}
+
 .btn:hover{
     background-color: var(--highlight-color);
 }
@@ -90,6 +98,27 @@ header h1{
     height: 100%;
     max-width: 50vw;
     max-height: 100vh;
+}
+
+.project-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-size: auto 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: var(--hero-text-color);  
+}
+
+.pirate-gui-card{
+    background-image:linear-gradient(var(--gradient-color), var(--gradient-color)), url('./assets/pirate-gui.jpeg');
+    background-position: left;
+}
+
+.cmail-card{
+    background-image:linear-gradient(var(--gradient-color), var(--gradient-color)), url('./assets/cmail-screenshot.jpeg');
+    background-position: right;
 }
 
 .text-box{
@@ -112,16 +141,16 @@ header h1{
     margin: 3vw;
 }
 
-#about{
-    background-color: var(--highlight-color);
+.project-image{
+    width: 100%;
+    height: 50%;
 }
 
-#projects{
-    background-color: var(--button-color);
-}
-
-#contact{
-    background-color: var(--highlight-color);
+.about-list{
+    display: flex;
+    height: 50vh;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 @media only screen and (max-width: 768px) {
@@ -144,9 +173,17 @@ header h1{
         overflow: scroll;
     }
 
+    /* .project-card{
+        background-size: auto 50vh; 
+    } */
+
     .logo{
         height: 10vh;
         width: auto;
         margin: 1%;
+    }
+
+    .about-list{
+        height: 35vh;
     }
 }
