--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@
     --button-color: rgba(196, 107, 174, 0.8);
     --background-color: #C6C5B9;
     --highlight-color: #279AF1;
+    --blue-background: #279AF1;
+    --pink-background: #c46bae;
+    --link-color: #ECC30B;
     --text-color: #131112;
 }
 
@@ -54,6 +57,15 @@ header h1{
 
     color: var(--hero-text-color);
 }
+a{
+    text-decoration: none;
+    color: var(--link-color);
+}
+
+.link-box a {
+    font-size: 2em;
+    margin: 5%;
+}
 
 .hero-inner .btn{
     display: block;
@@ -76,17 +88,23 @@ header h1{
     background-color: var(--button-color);
 }
 
+.link-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .section{
     display: flex;
     height: 100vh;
 }
 
 .blue-section{
-    background-color: var(--highlight-color);
+    background-color: var(--blue-background);
 }
 
 .pink-section{
-    background-color: var(--button-color);
+    background-color: var(--pink-background);
 }
 
 .btn:hover{
@@ -122,10 +140,11 @@ header h1{
 }
 
 .text-box{
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center; 
-    align-content: center;
+    justify-content: center;
     size: 1em;
 }
 
@@ -162,6 +181,10 @@ header h1{
         flex-direction: column;
     }
 
+    .odd-section{
+        flex-direction: column-reverse;
+    }
+
     .half-section{
         width: 100%;
         height: 50%;
@@ -171,6 +194,12 @@ header h1{
 
     .text-box{
         overflow: scroll;
+        height: 50vh;
+    }
+
+    .link-box{
+        flex-direction: row;
+        justify-content: center;
     }
 
     /* .project-card{
