--- a/main.css
+++ b/main.css
@@ -175,6 +175,8 @@ a{
 @media only screen and (max-width: 768px) {
     header{
         background-size: auto 100vh;
+        background-position: center;
+        background-attachment: scroll;
     }
 
     .section{
@@ -202,9 +204,11 @@ a{
         justify-content: center;
     }
 
-    /* .project-card{
-        background-size: auto 50vh; 
-    } */
+    .project-card{
+        background-size: auto 100vh;
+        background-position: center;
+        background-attachment: scroll;
+    }
 
     .logo{
         height: 10vh;
