--- a/main.css
+++ b/main.css
@@ -210,7 +210,7 @@ a{
 
     .link-box{
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
     .link-box a{
@@ -253,12 +253,11 @@ a{
     
     .link-box{
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
     .link-box a{
         font-size: 1em;
-        margin: 1%;
     }
 
     .button-box{
