moved project links to image areas

--- a/main.css
+++ b/main.css
@@ -126,6 +126,7 @@ a{
 
 .project-card{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
