--- a/main.css
+++ b/main.css
@@ -224,8 +224,8 @@ a{
     }
 
     .project-card{
-        background-size: auto 100vh;
-        background-position: center;
+        /* background-size: auto 100vh;
+        background-position: center; */
         background-attachment: scroll;
     }
 
